# TIP_S

./: .gitignore  CMakeLists.txt  README.md  harmonic_vibration_and_meander.cpp  harmonic_vibration_and_meander.h  harmonic_vibration_and_meander.ui  main.cpp
